test/src/e2e_vm_tests/test_programs/should_fail/assign_to_field_of_non_mutable_struct/src/main.sw
script;

struct S {
    x: u64,
}

fn wow() {
    let thing: S = S { x: 0 };
    thing.x = 23;
}

